@@ -44,6 +44,8 @@ VERSION 4.2.2
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
 -----------------------------------------------------------------------------------------
+*$pgv_lang["current_links"]							27 May 2009				w
+*$pgv_lang["add_more_links"]						27 May 2009				w
 *$pgv_lang["add_or_remove_links"]					20 May 2009				w
 *$pgv_lang["current_links"]							20 May 2009				C
 *$pgv_lang["add_more_links"]						20 May 2009				C
